Bug 192893 - My spreadsheet make kspread crash
Summary: My spreadsheet make kspread crash
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
: 194859 212059 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-16 16:45 UTC by rjacolin
Modified: 2009-10-28 03:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The file which make KSpread to crash (26.60 KB, application/x-kspread)
2009-05-16 16:50 UTC, rjacolin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rjacolin 2009-05-16 16:45:44 UTC
Version:           2.0 RC1 (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

Process to reproduce :
1. Open the file

My file has 4 tabs with very simple formulas (addition) which use cell in different tabs, cell color, french language but it doesn't seem the reason because the same template in older version (and simpler) works.

Result :

KSpread Crash.

Expected Behavious :
My spreadsheet  opened in KSpread ;) !

Here the backtraces :

Application : KSpread (kspread), signal SIGSEGV
0x00007f19e5b43cf0 in nanosleep () from /lib/libc.so.6

Thread 1 (Thread 0x7f19e8aba750 (LWP 20786)):
[KCrash Handler]
#5  0x00007f19da482366 in KSpread::Style::parentName () from /usr/lib/libkspreadcommon.so.5
#6  0x00007f19da49f93e in KSpread::StyleManager::loadXML () from /usr/lib/libkspreadcommon.so.5
#7  0x00007f19da591338 in KSpread::Doc::loadXML () from /usr/lib/libkspreadcommon.so.5
#8  0x00007f19e842887a in KoDocument::loadNativeFormatFromStoreInternal () from /usr/lib/libkomain.so.5
#9  0x00007f19e84293a5 in KoDocument::loadNativeFormatFromStore () from /usr/lib/libkomain.so.5
#10 0x00007f19e8429757 in KoDocument::loadNativeFormat () from /usr/lib/libkomain.so.5
#11 0x00007f19e8426880 in KoDocument::openFile () from /usr/lib/libkomain.so.5
#12 0x00007f19e58749a4 in KParts::ReadOnlyPart::openUrl () from /usr/lib/libkparts.so.4
#13 0x00007f19e8422cb3 in KoDocument::openUrl () from /usr/lib/libkomain.so.5
#14 0x00007f19e843f5d0 in KoMainWindow::openDocumentInternal () from /usr/lib/libkomain.so.5
#15 0x00007f19e843fb63 in KoMainWindow::openDocument () from /usr/lib/libkomain.so.5
#16 0x00007f19e844cbb2 in KoApplication::start () from /usr/lib/libkomain.so.5
#17 0x00007f19e86dd53c in kdemain () from /usr/lib/libkdeinit4_kspread.so
#18 0x00007f19e5aba5a6 in __libc_start_main () from /lib/libc.so.6
#19 0x00000000004006f9 in _start ()
Comment 1 rjacolin 2009-05-16 16:50:59 UTC
Created attachment 33724 [details]
The file which make KSpread to crash

It's my comptability file : it's personal data.
Comment 2 Dario Andres 2009-05-16 17:17:21 UTC
This could be related to bug 186204. Thanks
Comment 3 Dario Andres 2009-06-08 00:21:40 UTC
*** Bug 194859 has been marked as a duplicate of this bug. ***
Comment 4 Tomas Mecir 2009-10-18 15:12:16 UTC
SVN commit 1037143 by mecir:

Do not crash if the default style is not called "Default".

BUG: 192893
BUG: 186204



 M  +1 -1      StyleManager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1037143
Comment 5 Jonathan Thomas 2009-10-28 03:31:59 UTC
*** Bug 212059 has been marked as a duplicate of this bug. ***