Do not crash if the default style is not called "Default".

BUG: 192893
BUG: 186204


svn path=/trunk/koffice/; revision=1037143